<resources>
    <string name="app_name">Swimmer_customer</string>

    <string name="menu_item_category">카테고리</string>
    <string name="menu_item_favorite">관심상품</string>
    <string name="menu_item_home">홈</string>
    <string name="menu_item_history">최근 본</string>
    <string name="menu_item_mypage">마이페이지</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="item_search">검색</string>
    <string name="item_shopping_cart">장바구니</string>
    <string name="paymentButton">구매하기</string>
    <string name="fragment_home_raking_text">랭킹</string>
    <string name="review_tab_review_text">상품 후기│</string>
    <string name="review_tab_buyerRating">구매자 평점</string>
    <string name="review_tab_very_good">아주 좋아요</string>
    <string name="review_tab_like_it">맘에 들어요</string>
    <string name="review_tab_so_so">보통이에요</string>
    <string name="review_tab_just_okay">그냥 그래요</string>
    <string name="review_tab_not_much">별로에요</string>
    <string name="review_tab_star_rating">별점</string>
    <string name="review_tab_height">키</string>
    <string name="review_tab_weight">체중</string>
    <string name="review_tab_default_size">평소사이즈</string>

    <!-- 고진호 String -->
    <string name="error_email_required">이메일을 입력해주세요.</string>
    <string name="error_invalid_email_format">이메일 양식이 올바르지 않습니다.</string>
    <string name="error_password_length">비밀번호는 6자 이상이어야 합니다.</string>
    <string name="error_newpassword_length">새 비밀번호는 6자 이상이어야 합니다.</string>
    <string name="modify_swimexp_success">수영 경력이 수정되었습니다.</string>
    <string name="modify_swimexp_failure">수영 경력 수정에 실패했습니다.</string>
    <string name="error_password">비밀번호를 확인해주세요.</string>
    <string name="duplicate_password">현재 비밀번호와 일치합니다. 다른 비밀번호를 입력해주세요.</string>
    <string name="error_passwords_not_match">비밀번호가 일치하지 않습니다.</string>
    <string name="error_consent_required">정보 동의를 체크해주세요.</string>
    <string name="findinfokey">key</string>
    <string name="findid">findId </string>
    <string name="resetpassword">resetPassword</string>
    <string name="login_success">로그인 성공</string>
    <string name="login_role_error">사용자용 계정이 아닌 계정으로는 로그인할 수 없습니다.</string>
    <string name="role_customer">사용자</string>
    <string name="auto_login_success">자동 로그인 성공</string>
    <string name="login_failure">로그인 실패 이메일 또는 비밀번호를 확인해주세요.</string>
    <string name="key_generic">key</string>
    <string name="action_find_id">findId</string>
    <string name="title_find_id">아이디 찾기</string>
    <string name="title_reset_password">비밀번호 찾기</string>
    <string name="message_your_email_is">당신의 이메일은 </string>
    <string name="message_email_template">%s 입니다</string>
    <string name="error_no_user_matching_info">입력한 정보로 등록된 사용자가 없습니다.</string>
    <string name="title_notification">알림</string>
    <string name="message_password_reset_email_sent">비밀번호 재전송 이메일을 발송했습니다.</string>
    <string name="action_confirm">확인</string>
    <string name="withdrawal_user_failure">회원탈퇴에 실패하였습니다. 인터넷 연결을 확인해주세요.</string>
    <string name="error_password_reset_failed">비밀번호 재설정 실패했습니다.</string>
    <string name="error_nickname_required">닉네임을 입력해주세요.</string>
    <string name="error_phone_required">전화번호를 입력해주세요.</string>
    <string name="title_signup">회원가입</string>
    <string name="error_check_id_duplication">아이디 중복검사를 진행해주세요.</string>
    <string name="signup_success">회원가입에 성공했습니다. 로그인해주세요.</string>
    <string name="signup_failure">회원가입에 실패했습니다.</string>
    <string name="error_email_already_exists">이미 존재하는 이메일입니다.</string>
    <string name="password_modify_success">비밀번호가 변경되었습니다.</string>
    <string name="withdrawal_success">회원 탈퇴 처리가 완료되었습니다.</string>
    <string name="modifypassword_relogin">안전한 서비스 이용을 위해 다시 로그인해 주시기 바랍니다.</string>
    <string name="password_modify_failure">비밀번호 변경에 실패하였습니다.</string>
    <string name="message_email_available">이메일을 사용할 수 있습니다.</string>
    <string name="duration_less_than_1_year">1년 이하</string>
    <string name="duration_less_than_3_years">3년 이하</string>
    <string name="duration_less_than_5_years">5년 이하</string>
    <string name="duration_more_than_5_years">5년 이상</string>
    <string name="duration_no_selection">선택안함</string>
    <string name="mypage_title">마이 페이지</string>
    <string name="modifyinfo_title">개인정보 수정</string>
    <string name="check_passswordpage_title">비밀번호 확인</string>
    <string name="alert_message_login_required">로그인이 필요한 서비스입니다.</string>
    <string name="alert_message_logout_completed">로그아웃 완료되었습니다.</string>
    <string name="nickname_is">닉네임 : %s</string>
    <string name="delivery_point_manage">배송지 관리</string>
    <string name="detail_address_toolbar">상세정보</string>
    <string name="delivery_name_is">이름 : </string>
    <string name="delivery_phone_is">핸드폰 번호 : </string>
    <string name="delevery_point_cancel">배송지 등록이 취소되었습니다.</string>
    <string name="address_added_success">배송지가 추가되었습니다.</string>
    <string name="address_added_failure">배송지 추가에 실패하였습니다. 다시 시도해주세요.</string>
    <string name="error_name_required">이름을 입력해주세요.</string>
    <string name="error_detail_delivery_point_required">상세 주소를 입력해주세요.</string>
    <string name="error_nickname_none">사용자 닉네임을 찾을 수 없습니다.</string>
    <string name="delivery_point_search">배송지 검색</string>
    <string name="permission_denied">권한이 거부되었습니다.</string>
    <string name="profile_success">프로필 사진이 등록되었습니다.</string>
    <string name="profile_failure">프로필 사진 등록에 실패하였습니다.</string>
    <string name="modify_nickname_success">닉네임이 수정되었습니다.</string>
    <string name="modify_nickname_failure">닉네임 수정에 실패했습니다.</string>
    <string name="modfiy_phone_success">휴대폰 번호가 수정되었습니다.</string>
    <string name="modfiy_phone_failure">휴대폰 번호 수정에 실패했습니다.</string>
    <string name="copyright_and_version">&#169; 2023 멋사. 개발 팀: 3팀 | v1.0.0</string>

    <string name="bottom_sheet_149_cm">149 cm 이하</string>
    <string name="bottom_sheet_150_152_cm">150 ~ 152 cm</string>
    <string name="bottom_sheet_153_155cm">153 ~ 155cm</string>
    <string name="bottom_sheet_156_158_cm">156 ~ 158 cm</string>
    <string name="bottom_sheet_159_161_cm">159 ~ 161 cm</string>
    <string name="bottom_sheet_162_164_cm">162 ~ 164 cm</string>
    <string name="bottom_sheet_165_167_cm">165 ~ 167 cm</string>
    <string name="bottom_sheet_168_170_cm">168 ~ 170 cm</string>
    <string name="bottom_sheet_171_173_cm">171 ~ 173 cm</string>
    <string name="bottom_sheet_174_176_cm">174 ~ 176 cm</string>
    <string name="bottom_sheet_177_179_cm">177 ~ 179 cm</string>
    <string name="bottom_sheet_180_182_cm">180 ~ 182 cm</string>
    <string name="bottom_sheet_183_185_cm">183 ~ 185 cm</string>
    <string name="bottom_sheet_186_188_cm">186 ~ 188 cm</string>
    <string name="bottom_sheet_189_191_cm">189 ~ 191 cm</string>
    <string name="bottom_sheet_191_cm">191 cm 이상</string>
    <string name="bottom_sheet_44_kg">44 kg 이하</string>
    <string name="bottom_sheet_45_47_kg">45 ~ 47 kg</string>
    <string name="bottom_sheet_48_50_kg">48 ~ 50 kg</string>
    <string name="bottom_sheet_51_53_kg">51 ~ 53 kg</string>
    <string name="bottom_sheet_54_56_kg">54 ~ 56 kg</string>
    <string name="bottom_sheet_57_59_kgm">57 ~ 59 kgm</string>
    <string name="bottom_sheet_60_62_kg">60 ~ 62 kg</string>
    <string name="bottom_sheet_63_65_kg">63 ~ 65 kg</string>
    <string name="bottom_sheet_66_68_kg">66 ~ 68 kg</string>
    <string name="bottom_sheet_69_71_kg">69 ~ 71 kg</string>
    <string name="bottom_sheet_72_74_kg">72 ~ 74 kg</string>
    <string name="bottom_sheet_75_77_kg">75 ~ 77 kg</string>
    <string name="bottom_sheet_78_80_kg">78 ~ 80 kg</string>
    <string name="bottom_sheet_81_83_kg">81 ~ 83 kg</string>
    <string name="bottom_sheet_84_86_kg">84 ~ 86 kg</string>
    <string name="bottom_sheet_87_89_kg">87 ~ 89 kg</string>
    <string name="bottom_sheet_90_92_kg">90 ~ 92 kg</string>
    <string name="bottom_sheet_93_95_kg">93 ~ 95 kg</string>
    <string name="bottom_sheet_96_98_kg">96 ~ 98 kg</string>
    <string name="bottom_sheet_99_101_kg">99 ~ 101 kg</string>
    <string name="bottom_sheet_102_104_kg">102 ~ 104 kg</string>
    <string name="bottom_sheet_105_107_kg">105 ~ 107 kg</string>
    <string name="bottom_sheet_108_110_kg">108 ~110 kg</string>
    <string name="bottom_sheet_111_113_kg">111 ~ 113 kg</string>
    <string name="bottom_sheet_114_116_kg">114 ~ 116 kg</string>
    <string name="bottom_sheet_117_119_kg">117 ~ 119 kg</string>
    <string name="bottom_sheet_120_122_kg">120 ~ 122 kg</string>
    <string name="bottom_sheet_123_125_kg">123 ~ 125 kg</string>
    <string name="bottom_sheet_126_128_kg">126 ~ 128 kg</string>
    <string name="bottom_sheet_129_131_kg">129 ~ 131 kg</string>
    <string name="bottom_sheet_132_134_kg">132 ~ 134 kg</string>
    <string name="bottom_sheet_135_137_kg">135 ~137 kg</string>
    <string name="bottom_sheet_138_140_kg">138 ~ 140 kg</string>
    <string name="bottom_sheet_141_143_kg">141 ~ 143 kg</string>
    <string name="bottom_sheet_144_146_kg">144 ~ 146 kg</string>
    <string name="bottom_sheet_147_149_kg">147 ~ 149 kg</string>
    <string name="bottom_sheet_150_kg">150 kg 이상</string>
    <string name="bottom_sheet_size_4xs">4XS</string>
    <string name="bottom_sheet_size_3xs">3XS</string>
    <string name="bottom_sheet_size_2xs">2XS</string>
    <string name="bottom_sheet_size_xs">XS</string>
    <string name="bottom_sheet_size_m">M</string>
    <string name="bottom_sheet_size_L">L</string>
    <string name="bottom_sheet_size_XL">XL</string>
    <string name="bottom_sheet_size_2XL">2XL</string>
    <string name="bottom_sheet_size_3XL">3XL</string>
    <string name="review_item_custom_info">맞춤 정보</string>
    <string name="review_item_selection_option">선택옵션</string>
    <string name="review_item_item_evaluation">상품평</string>
    <string name="payment_button_bottom_sheet_spinner">옵션을 선택해주세요.</string>
    <string name="payment_button_bottom_sheet_total_amount">총 금액 : </string>
    <string name="payment_button_bottom_sheet_payment_button">바로 결제</string>

    <!--spinner items -->
    <string-array name="spinner_items">
        <item>배송 메세지 선택</item>
        <item>안전한 배송 부탁드립니다</item>
        <item>부재 시 문자 부탁드립니다</item>
        <item>집 앞에 배송 부탁드립니다</item>
        <item>감사합니다</item>
    </string-array>


    <!--이 문자열 너무 길어서 맨 밑으로 빼주세요 -->
    <string name="privacy_policy">
    <![CDATA[
1. 개인정보의 처리 목적\n
Swimmer은 다음의 목적을 위하여 개인정보를 처리하고 있으며, 다음의 목적 이외의 용도로는 이용하지 않습니다.\n
– 고객 가입의사 확인, 고객에 대한 서비스 제공에 따른 본인 식별.인증, 회원자격 유지.관리, 물품 또는 서비스 공급에 따른 금액 결제, 물품 또는 서비스의 공급.배송 등\n\n

2. 개인정보의 처리 및 보유 기간\n
① Swimmer은 정보주체로부터 개인정보를 수집할 때 동의 받은 개인정보 보유․이용기간 또는 법령에 따른 개인정보 보유․이용기간 내에서 개인정보를 처리․보유합니다.\n
② 구체적인 개인정보 처리 및 보유 기간은 다음과 같습니다.\n
– 고객 가입 및 관리 : 카카오싱크를 통한 회원가입 및 카카오채널을 통한 관리\n
– 보유 기간 : 카카오채널 탈퇴 시, 즉시 삭제\n\n

3. 정보주체와 법정대리인의 권리·의무 및 그 행사방법\n
이용자는 개인정보주체로써 다음과 같은 권리를 행사할 수 있습니다.\n
① 정보주체는 Swimmer에 대해 언제든지 다음 각 호의 개인정보 보호 관련 권리를 행사할 수 있습니다.\n
– 개인정보 열람요구\n
– 오류 등이 있을 경우 정정 요구\n
– 삭제요구\n
– 처리정지 요구\n\n

4. 처리하는 개인정보의 항목 작성\n
① Swimmer은 다음의 개인정보 항목을 처리하고 있습니다.\n
– 회원 가입 시\n
필수항목 : 닉네임, 이메일, 전화번호, 수영경력,\n
선택항목 : \n
수집목적 : Swimmer 회원관리 및 마케팅 이용\n
보유기간 : 회원 탈퇴 또는 동의철회 시 지체없이 파기\n
– 고객 문의 시(비회원)\n
필수항목 : 문의종류, 이름, 휴대폰번호, 이메일, 문의사항\n
수집목적 : 고객문의 및 상담요청에 대한 회신, 상담을 위한 서비스 이용기록 조회\n
보유기간 : 문의 접수 후 2년 간 보관\n\n

5. 개인정보의 파기\n
‘Swimmer’은 원칙적으로 개인정보 처리목적이 달성된 경우에는 지체없이 해당 개인정보를 파기합니다. 파기의 절차, 기한 및 방법은 다음과 같습니다.\n
– 파기절차: 정보주체가 회원가입 등을 위해 입력한 정보는 목적이 달성된 후 별도의 DB에 저장되며 내부 방침 및 기타 관련 법령에 따라 일정 기간 저장된 후 파기됩니다.\n
– 파기방법: 전자적 파일 형태의 정보는 기록을 재생할 수 없는 기술적 방법을 사용하여 삭제하며, 종이 문서에 기록되어 저장된 개인정보는 분쇄기로 분쇄하거나 소각하여 파기합니다.\n\n

6. 개인정보 자동 수집 장치의 설치•운영 및 거부에 관한 사항\n
① ‘Swimmer’은 개별적인 맞춤서비스를 제공하기 위해 이용정보를 저장하고 수시로 불러오는 ‘쿠키(cookie)’를 사용합니다. 이용자는 쿠키 설치에 대한 선택권을 가지고 있으며, 웹브라우저의 옵션을 설정함으로써 모든 쿠키를 허용하거나, 쿠키가 저장될 때마다 확인을 거치거나, 아니면 모든 쿠키의 저장을 거부할 수도 있습니다.\n
]]>
</string>
    <string name="developing">개발중입니다</string>
</resources>