<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/reviewTabChipWeightBottomSheet"
    style="@style/Widget.Material3.BottomSheet"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.bottomsheet.BottomSheetDragHandleView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:text="@string/review_tab_weight"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/reviewOptionChipGroup"
        android:layout_width="match_parent"
        android:paddingStart="3dp"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/chipSize4XS"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:layoutDirection="rtl"
            android:text="@string/bottom_sheet_size_4xs"
            android:textColor="@color/black"
            app:chipBackgroundColor="@drawable/chip_state_color_list"
            app:chipIconTint="@color/black"
            app:chipIconVisible="true" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipSize3XS"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:layoutDirection="rtl"
            android:text="@string/bottom_sheet_size_3xs"
            android:textColor="@color/black"
            app:chipBackgroundColor="@drawable/chip_state_color_list"
            app:chipIconTint="@color/black"
            app:chipIconVisible="true" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipSize2XS"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:layoutDirection="rtl"
            android:text="@string/bottom_sheet_size_2xs"
            android:textColor="@color/black"
            app:chipBackgroundColor="@drawable/chip_state_color_list"
            app:chipIconTint="@color/black"
            app:chipIconVisible="true" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipSizeXS"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:layoutDirection="rtl"
            android:text="@string/bottom_sheet_size_xs"
            android:textColor="@color/black"
            app:chipBackgroundColor="@drawable/chip_state_color_list"
            app:chipIconTint="@color/black"
            app:chipIconVisible="true" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chiSizeM"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:layoutDirection="rtl"
            android:text="@string/bottom_sheet_size_m"
            android:textColor="@color/black"
            app:chipBackgroundColor="@drawable/chip_state_color_list"
            app:chipIconTint="@color/black"
            app:chipIconVisible="true" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipSizeL"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:layoutDirection="rtl"
            android:text="@string/bottom_sheet_size_L"
            android:textColor="@color/black"
            app:chipBackgroundColor="@drawable/chip_state_color_list"
            app:chipIconTint="@color/black"
            app:chipIconVisible="true" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipSizeXL"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:layoutDirection="rtl"
            android:text="@string/bottom_sheet_size_XL"
            android:textColor="@color/black"
            app:chipBackgroundColor="@drawable/chip_state_color_list"
            app:chipIconTint="@color/black"
            app:chipIconVisible="true" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipSize2XL"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:layoutDirection="rtl"
            android:text="@string/bottom_sheet_size_2XL"
            android:textColor="@color/black"
            app:chipBackgroundColor="@drawable/chip_state_color_list"
            app:chipIconTint="@color/black"
            app:chipIconVisible="true" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipSize3XL"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:layoutDirection="rtl"
            android:text="@string/bottom_sheet_size_3XL"
            android:textColor="@color/black"
            app:chipBackgroundColor="@drawable/chip_state_color_list"
            app:chipIconTint="@color/black"
            app:chipIconVisible="true" />


    </com.google.android.material.chip.ChipGroup>
</LinearLayout>